-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.7.0
-
None
-
Windows 7 sp1 64 bits
-
0f4ccda0a18527a30796cf0bd23b37a2b2a6f2b9
Every time the debugger is started, the disabled breakpoints have to be enabled/disabled otherwise the debugger might stop at them.
In the log file, the disabled debugger whose state is ignored, is:
1879: if(style!=zzz::Core::ReportStyle::Document)