Debugger: Fix disabled breakpoints on start up in cdbengine.

Task-number: QTCREATORBUG-9295

Change-Id: Ib9694b2dda9f4a53508fa126f720b8eed1a0200c
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>